Update MovieShowService.java